--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
   }
   
   h1 {
@@ -32,7 +33,7 @@ body {
     padding: 8px 16px;
     border: none;
     border-radius: 4px;
-    background-color: #0006b3;
+    background-color: #098803;
     color: #fff;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -42,9 +43,21 @@ body {
     background-color: #09b300;
   }
 
-
   .aviso{
     font-size: 10px;
     color: rgb(96, 96, 96);
   }
   
+  .btn-reiniciar{
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    background-color: #0000ff;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .btn-reiniciar:hover {
+    background-color: #054576;
+  }
